tests/ui/unstable-feature-bound/unstable-impl-assoc-type.fail.stderr
error: unstable feature `feat_foo` is used without being enabled.
  --> $DIR/unstable-impl-assoc-type.rs:23:16
   |
LL |   type Assoc = Self;
   |                ^^^^
   |
   = help: The feature can be enabled by marking the current item with `#[unstable_feature_bound(feat_foo)]`
note: required for `Foo` to implement `Bar`
  --> $DIR/unstable-impl-assoc-type.rs:19:6
   |
LL | #[unstable_feature_bound(feat_foo)]
   | ----------------------------------- unsatisfied trait bound introduced here
LL | impl Bar for Foo {}
   |      ^^^     ^^^
note: required by a bound in `Trait::Assoc`
  --> $DIR/unstable-impl-assoc-type.rs:13:17
   |
LL |     type Assoc: Bar;
   |                 ^^^ required by this bound in `Trait::Assoc`

error: aborting due to 1 previous error

